--- a/frontend/src/app/components/accounts/accounts-list/accounts-list.html
+++ b/frontend/src/app/components/accounts/accounts-list/accounts-list.html
@@ -1,11 +1,11 @@
 <div class="flex flex-row">
     <span class="font-bold text-gray-500 w-full text-sm uppercase pb-1 mb-1 border-b border-gray-200">Liste des comptes</span>
 </div>
-<div class="flex flex-row h-8">
+<div class="flex flex-row h-8 hover:bg-yellow-50 cursor-pointer px-2">
     <div class="basis-9/12 text-sm">Compte CIC</div>
     <div class="basis-3/12 text-right text-sm" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
 </div>
-<div class="flex flex-row h-8">
+<div class="flex flex-row h-8 hover:bg-yellow-50 cursor-pointer px-2">
     <div class="basis-9/12 text-sm">Compte Crédit Agricole</div>
     <div class="basis-3/12 text-right text-sm" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
 </div>
