--- a/frontend/src/app/pages/account-page/account-page.html
+++ b/frontend/src/app/pages/account-page/account-page.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="px-1 md:px-0">
+<div class="px-1 md:px-0 pb-8">
   <div class="flex flex-row mx-auto max-w-7xl gap-1 md:gap-3">
     <div class="hidden md:block md:basis-3/12">
       <app-ui-card>
