--- a/frontend/src/app/pages/budget-page/budget-page.html
+++ b/frontend/src/app/pages/budget-page/budget-page.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-budget-header></app-budget-header>
-<div class="px-1 md:px-0">
+<div class="px-1 md:px-0 pb-8">
   <div class="flex flex-row mx-auto max-w-7xl gap-1 md:gap-3">
     <div class="basis-full md:basis-9/12">
       <app-ui-card>
