feat: implement account table and transaction components for enhanced account management

--- a/frontend/src/app/components/accounts/accounts-list/accounts-list.html
+++ b/frontend/src/app/components/accounts/accounts-list/accounts-list.html
@@ -9,6 +9,7 @@
     <div class="basis-9/12 text-sm">Compte Crédit Agricole</div>
     <div class="basis-3/12 text-right text-sm" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
 </div>
+<div class="h-2"></div>
 <div class="flex flex-row h-8">
     <button class="w-full text-xs hover:bg-gray-50 cursor-pointer border-dashed hover:border-solid border border-gray-300 rounded-xl p-2 h-8 flex items-center justify-center">Ajouter un compte</button>
 </div>
