--- a/frontend/src/app/pages/account-page/account-page.html
+++ b/frontend/src/app/pages/account-page/account-page.html
@@ -8,7 +8,7 @@
     </div>
     <div class="basis-full md:basis-9/12">
       <app-ui-card>
-        
+        <app-account-table></app-account-table>
       </app-ui-card>
     </div>
   </div>
