--- a/frontend/src/app/components/accounts/accounts-list/accounts-list.html
+++ b/frontend/src/app/components/accounts/accounts-list/accounts-list.html
@@ -2,12 +2,12 @@
     <span class="font-bold text-gray-500 w-full text-sm uppercase pb-1 mb-1 border-b border-gray-200">Liste des comptes</span>
 </div>
 <div class="flex flex-row h-8 hover:bg-yellow-50 cursor-pointer px-2">
-    <div class="basis-9/12 text-sm">Compte CIC</div>
-    <div class="basis-3/12 text-right text-sm" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
+    <div class="basis-9/12 text-xs">Compte CIC</div>
+    <div class="basis-3/12 text-right text-xs" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
 </div>
 <div class="flex flex-row h-8 hover:bg-yellow-50 cursor-pointer px-2">
-    <div class="basis-9/12 text-sm">Compte Crédit Agricole</div>
-    <div class="basis-3/12 text-right text-sm" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
+    <div class="basis-9/12 text-xs">Compte Crédit Agricole</div>
+    <div class="basis-3/12 text-right text-xs" [class]="getAmountClass(300)">{{ formatCurrencyWithSign(300) }}</div>
 </div>
 <div class="h-2"></div>
 <div class="flex flex-row h-8">
